// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`drawer > custom header 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      aria-controls="drawer-test"
      aria-haspopup="dialog"
      type="button"
    >
      Open
    </button>
  </div>
</DocumentFragment>
`;

exports[`drawer > function footer 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      aria-controls="drawer-test"
      aria-haspopup="dialog"
      type="button"
    >
      Open
    </button>
  </div>
</DocumentFragment>
`;

exports[`drawer > function header 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      aria-controls="drawer-test"
      aria-haspopup="dialog"
      type="button"
    >
      Open
    </button>
  </div>
</DocumentFragment>
`;

exports[`drawer > renders custom size=large 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      aria-controls="_r_f_"
      aria-haspopup="dialog"
      type="button"
    >
      button
    </button>
  </div>
</DocumentFragment>
`;

exports[`drawer > renders custom size=medium 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      aria-controls="_r_c_"
      aria-haspopup="dialog"
      type="button"
    >
      button
    </button>
  </div>
</DocumentFragment>
`;

exports[`drawer > renders custom size=small 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      aria-controls="_r_i_"
      aria-haspopup="dialog"
      type="button"
    >
      button
    </button>
  </div>
</DocumentFragment>
`;

exports[`drawer > renders with custom classNames 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  />
</DocumentFragment>
`;

exports[`drawer > renders with default Props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      aria-controls="_r_0_"
      aria-haspopup="dialog"
      type="button"
    >
      Test
    </button>
  </div>
</DocumentFragment>
`;

exports[`drawer > renders with default Props and function children 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      aria-controls="_r_3_"
      aria-haspopup="dialog"
      type="button"
    >
      Open
    </button>
  </div>
</DocumentFragment>
`;

exports[`drawer > renders with default Props and function children open 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  />
</DocumentFragment>
`;

exports[`drawer > renders with disclosure 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      aria-controls="drawer-test"
      aria-haspopup="dialog"
      type="button"
    >
      Test
    </button>
  </div>
</DocumentFragment>
`;

exports[`drawer > renders with disclosure and onClose 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      aria-controls="drawer-test"
      aria-haspopup="dialog"
      type="button"
    >
      Open drawer
    </button>
  </div>
  @keyframes animation-0 {
  0% {
    -webkit-transform: translateY(+100%);
    -moz-transform: translateY(+100%);
    -ms-transform: translateY(+100%);
    transform: translateY(+100%);
  }

  100% {
    -webkit-transform: translateY(0%);
    -moz-transform: translateY(0%);
    -ms-transform: translateY(0%);
    transform: translateY(0%);
  }
}

@keyframes animation-0 {
  0% {
    -webkit-transform: translateY(+100%);
    -moz-transform: translateY(+100%);
    -ms-transform: translateY(+100%);
    transform: translateY(+100%);
  }

  100% {
    -webkit-transform: translateY(0%);
    -moz-transform: translateY(0%);
    -ms-transform: translateY(0%);
    transform: translateY(0%);
  }
}

@keyframes animation-1 {
  from {
    -webkit-transform: translateX(22rem);
    -moz-transform: translateX(22rem);
    -ms-transform: translateX(22rem);
    transform: translateX(22rem);
  }

  to {
    -webkit-transform: translateX(0);
    -moz-transform: translateX(0);
    -ms-transform: translateX(0);
    transform: translateX(0);
  }
}

@keyframes animation-1 {
  from {
    -webkit-transform: translateX(22rem);
    -moz-transform: translateX(22rem);
    -ms-transform: translateX(22rem);
    transform: translateX(22rem);
  }

  to {
    -webkit-transform: translateX(0);
    -moz-transform: translateX(0);
    -ms-transform: translateX(0);
    transform: translateX(0);
  }
}

@keyframes animation-2 {
  from {
    -webkit-transform: translateX(48rem);
    -moz-transform: translateX(48rem);
    -ms-transform: translateX(48rem);
    transform: translateX(48rem);
  }

  to {
    -webkit-transform: translateX(0);
    -moz-transform: translateX(0);
    -ms-transform: translateX(0);
    transform: translateX(0);
  }
}

@keyframes animation-2 {
  from {
    -webkit-transform: translateX(48rem);
    -moz-transform: translateX(48rem);
    -ms-transform: translateX(48rem);
    transform: translateX(48rem);
  }

  to {
    -webkit-transform: translateX(0);
    -moz-transform: translateX(0);
    -ms-transform: translateX(0);
    transform: translateX(0);
  }
}

@keyframes animation-3 {
  from {
    -webkit-transform: translateX(70rem);
    -moz-transform: translateX(70rem);
    -ms-transform: translateX(70rem);
    transform: translateX(70rem);
  }

  to {
    -webkit-transform: translateX(0);
    -moz-transform: translateX(0);
    -ms-transform: translateX(0);
    transform: translateX(0);
  }
}

@keyframes animation-3 {
  from {
    -webkit-transform: translateX(70rem);
    -moz-transform: translateX(70rem);
    -ms-transform: translateX(70rem);
    transform: translateX(70rem);
  }

  to {
    -webkit-transform: translateX(0);
    -moz-transform: translateX(0);
    -ms-transform: translateX(0);
    transform: translateX(0);
  }
}

.emotion-0 {
  position: fixed;
  top: 0;
  right: 0;
  height: 0;
  width: 0;
  overflow: hidden;
  background-color: #464959a6;
  z-index: 1;
  opacity: 0;
}

.emotion-0[data-open='true'] {
  padding: 1rem;
  overflow: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  bottom: 0;
  left: 0;
  height: 100%;
  width: 100%;
}

.emotion-0[data-visible='true'] {
  opacity: 1;
}

.emotion-0 {
  position: fixed;
  top: 0;
  right: 0;
  height: 0;
  width: 0;
  overflow: hidden;
  background-color: #464959a6;
  z-index: 1;
  opacity: 0;
}

.emotion-0[data-open='true'] {
  padding: 1rem;
  overflow: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  bottom: 0;
  left: 0;
  height: 100%;
  width: 100%;
}

.emotion-0[data-visible='true'] {
  opacity: 1;
}

.emotion-3 {
  background-color: #ffffff;
  position: relative;
  border-radius: 0.25rem;
  border: 0;
  padding: 1.5rem;
  width: 44.25rem;
  box-shadow: 0px 12px 24px 0px #2226383d,0px 8px 60px 0px #22263852;
  -webkit-transition: width 0.3s ease-in-out,-webkit-transform 0.3s ease-in-out;
  transition: width 0.3s ease-in-out,transform 0.3s ease-in-out;
  margin-right: 0;
  height: 100%;
  border-radius: 0;
  padding: 0;
}

.emotion-3[data-size="large"] {
  width: 53.125rem;
}

.emotion-3[data-size="medium"] {
  width: 44.25rem;
}

.emotion-3[data-size="small"] {
  width: 38.5rem;
}

.emotion-3[data-size="xsmall"] {
  width: 25rem;
}

.emotion-3[data-size="xxsmall"] {
  width: 22.5rem;
}

.emotion-3[data-placement="bottom"] {
  margin: auto;
  margin-bottom: 0;
}

.emotion-3[data-placement="bottom-left"] {
  margin: auto;
  margin-left: 0;
  margin-bottom: 0;
}

.emotion-3[data-placement="bottom-right"] {
  margin: auto;
  margin-right: 0;
  margin-bottom: 0;
}

.emotion-3[data-placement="center"] {
  margin: auto;
}

.emotion-3[data-placement="left"] {
  margin: auto;
  margin-left: 0;
}

.emotion-3[data-placement="right"] {
  margin: auto;
  margin-right: 0;
}

.emotion-3[data-placement="top"] {
  margin: auto;
  margin-top: 0;
}

.emotion-3[data-placement="top-left"] {
  margin: auto;
  margin-left: 0;
  margin-top: 0;
}

.emotion-3[data-placement="top-right"] {
  margin: auto;
  margin-right: 0;
  margin-top: 0;
}

.emotion-3[data-has-image='true'] {
  padding: 0;
}

.emotion-3[data-animation='true'] {
  -webkit-animation: animation-0 0.3s ease-in-out forwards;
  animation: animation-0 0.3s ease-in-out forwards;
}

.emotion-3[data-size="small"] {
  width: 22.25rem;
  -webkit-animation: animation-1 linear 150ms;
  animation: animation-1 linear 150ms;
}

.emotion-3[data-size="medium"] {
  width: 49rem;
  -webkit-animation: animation-2 linear 250ms;
  animation: animation-2 linear 250ms;
}

.emotion-3[data-size="large"] {
  width: 75.5rem;
  -webkit-animation: animation-3 linear 300ms;
  animation: animation-3 linear 300ms;
}

.emotion-3 {
  background-color: #ffffff;
  position: relative;
  border-radius: 0.25rem;
  border: 0;
  padding: 1.5rem;
  width: 44.25rem;
  box-shadow: 0px 12px 24px 0px #2226383d,0px 8px 60px 0px #22263852;
  -webkit-transition: width 0.3s ease-in-out,-webkit-transform 0.3s ease-in-out;
  transition: width 0.3s ease-in-out,transform 0.3s ease-in-out;
  margin-right: 0;
  height: 100%;
  border-radius: 0;
  padding: 0;
}

.emotion-3[data-size="large"] {
  width: 53.125rem;
}

.emotion-3[data-size="medium"] {
  width: 44.25rem;
}

.emotion-3[data-size="small"] {
  width: 38.5rem;
}

.emotion-3[data-size="xsmall"] {
  width: 25rem;
}

.emotion-3[data-size="xxsmall"] {
  width: 22.5rem;
}

.emotion-3[data-placement="bottom"] {
  margin: auto;
  margin-bottom: 0;
}

.emotion-3[data-placement="bottom-left"] {
  margin: auto;
  margin-left: 0;
  margin-bottom: 0;
}

.emotion-3[data-placement="bottom-right"] {
  margin: auto;
  margin-right: 0;
  margin-bottom: 0;
}

.emotion-3[data-placement="center"] {
  margin: auto;
}

.emotion-3[data-placement="left"] {
  margin: auto;
  margin-left: 0;
}

.emotion-3[data-placement="right"] {
  margin: auto;
  margin-right: 0;
}

.emotion-3[data-placement="top"] {
  margin: auto;
  margin-top: 0;
}

.emotion-3[data-placement="top-left"] {
  margin: auto;
  margin-left: 0;
  margin-top: 0;
}

.emotion-3[data-placement="top-right"] {
  margin: auto;
  margin-right: 0;
  margin-top: 0;
}

.emotion-3[data-has-image='true'] {
  padding: 0;
}

.emotion-3[data-animation='true'] {
  -webkit-animation: animation-0 0.3s ease-in-out forwards;
  animation: animation-0 0.3s ease-in-out forwards;
}

.emotion-3[data-size="small"] {
  width: 22.25rem;
  -webkit-animation: animation-1 linear 150ms;
  animation: animation-1 linear 150ms;
}

.emotion-3[data-size="medium"] {
  width: 49rem;
  -webkit-animation: animation-2 linear 250ms;
  animation: animation-2 linear 250ms;
}

.emotion-3[data-size="large"] {
  width: 75.5rem;
  -webkit-animation: animation-3 linear 300ms;
  animation: animation-3 linear 300ms;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 1rem;
  height: 100%;
  position: relative;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 1rem;
  height: 100%;
  position: relative;
}

.emotion-7 {
  padding-inline: 1rem;
  padding-top: 2rem;
}

.emotion-7 {
  padding-inline: 1rem;
  padding-top: 2rem;
}

.emotion-9 {
  margin: 0;
  border: 0;
  width: auto;
  height: 1px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #e9eaeb;
}

.emotion-9 {
  margin: 0;
  border: 0;
  width: auto;
  height: 1px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #e9eaeb;
}

.emotion-11 {
  overflow-y: auto;
  height: 100%;
}

.emotion-11 {
  overflow-y: auto;
  height: 100%;
}

.emotion-13 {
  padding-inline: 1rem;
}

.emotion-13 {
  padding-inline: 1rem;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 1rem;
  padding-top: 0;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 1rem;
  padding-top: 0;
}

.emotion-17 {
  position: absolute;
  top: 1rem;
  right: 1rem;
}

.emotion-17 {
  position: absolute;
  top: 1rem;
  right: 1rem;
}

.emotion-19 {
  vertical-align: middle;
  fill: currentColor;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-19 .fillStroke {
  stroke: currentColor;
  fill: none;
}

.emotion-19 {
  vertical-align: middle;
  fill: currentColor;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-19 .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div>
    <div
      class="backdrop-drawer emotion-0 emotion-1"
      data-animation="false"
      data-open="true"
      data-testid="test-backdrop"
      data-visible="true"
    >
      <dialog
        aria-label="drawer-test"
        aria-modal="true"
        class="emotion-2 emotion-3 emotion-4"
        data-animation="false"
        data-has-image="false"
        data-placement="top-right"
        data-size="medium"
        data-testid="test"
        id="drawer-test"
        open=""
        tabindex="0"
      >
        <div
          class="emotion-5 emotion-6"
        >
          <h2
            class="emotion-7 emotion-8 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_headingSmallStrong__m4c9ow16 style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
          >
            header
          </h2>
          <hr
            aria-orientation="horizontal"
            class="emotion-9 emotion-10"
            role="separator"
          />
          <div
            class="emotion-11 emotion-12"
          >
            <div
              class="emotion-13 emotion-14"
            >
              <div>
                drawer
              </div>
            </div>
          </div>
          <div
            class="emotion-15 emotion-16"
          />
        </div>
        <div
          class="emotion-17 emotion-18"
        >
          <button
            aria-label="close"
            class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
            data-testid="test-close-button"
            type="button"
          >
            <svg
              class="emotion-19 emotion-20"
              viewBox="0 0 16 16"
            >
              <path
                d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
              />
            </svg>
          </button>
        </div>
      </dialog>
    </div>
  </div>
</DocumentFragment>
`;

exports[`drawer > renders with open={true} 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  />
</DocumentFragment>
`;

exports[`drawer > renders without disclosure 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  />
</DocumentFragment>
`;

exports[`drawer > renders without separator 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  />
</DocumentFragment>
`;

exports[`drawer > with footer 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      aria-controls="drawer-test"
      aria-haspopup="dialog"
      type="button"
    >
      Open
    </button>
  </div>
</DocumentFragment>
`;
